# linkshortener

./: .gitignore  .slsignore  LICENSE  README.md  azure-pipelines.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  serverless.yml  tox.ini
azure-pipelines/: deploy-pipeline.yml  test-pipeline.yml
linkshortener/: lambda_types.py  notifications.py  shortener.py
linkshortener/templates/: email_template.html
