[tool.poetry]
name = "linkshortener"
version = "0.1.0"
description = ""
authors = ["Daniel Milnes <thebeanogamer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.10"
Jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.6.0"
flake8-bandit = "^2"
flake8-bugbear = "^20"
flake8-import-order = "^0.18"
flake8-string-format = "^0.2.3"
flake8-tidy-imports = "^3"
flake8-todo = "^0.7"
flake8-formatter-junit-xml = "^0.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
