[tool.poetry]
name = "linkshortener"
version = "0.1.0"
description = ""
authors = ["Daniel Milnes <thebeanogamer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20"
Jinja2 = "^2.11"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-bandit = "^2"
flake8-bugbear = "^21"
flake8-import-order = "^0.18"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4"
flake8-todo = "^0.7"
flake8-formatter-junit-xml = "^0.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
